package Data;

public class IDExistException extends Exception {}
