@startuml

title __SENSUMUDRED's Class Diagram__\n

  package UI {
    class Admin {
    }
  }
  

  package Business {
    class Case {
    }
  }
  

  package Business {
    class Citizen {
    }
  }
  

  package Data {
    class DatabaseHandler {
    }
  }
  

  package UI {
    class EditCaseController {
    }
  }
  

  package UI {
    class GUIController {
    }
  }
  

  package Data {
    class IDExistException {
    }
  }
  

  package UI {
    class LoginController {
    }
  }
  

  package Starter {
    class Main {
    }
  }
  

  package UI {
    class MenuController {
    }
  }
  

  package UI {
    class NewCaseController {
    }
  }
  

  package UI {
    class SearchCasePaneController {
    }
  }
  

  package UI {
    class Switch {
    }
  }
  

  package UI {
    class ViewCaseController {
    }
  }
  

  Admin -up-|> Initializable
  Admin -up-|> Application
  Admin o-- DatabaseHandler : dbh
  Case o-- Citizen : cCitizen
  EditCaseController -up-|> Initializable
  EditCaseController -up-|> Application
  EditCaseController o-- DatabaseHandler : dbh
  GUIController -up-|> Initializable
  GUIController -up-|> Application
  LoginController -up-|> Initializable
  LoginController -up-|> Application
  LoginController o-- DatabaseHandler : dbh
  MenuController -up-|> Initializable
  MenuController -up-|> Application
  MenuController o-- DatabaseHandler : dbh
  NewCaseController -up-|> Initializable
  NewCaseController -up-|> Application
  NewCaseController o-- DatabaseHandler : dbh
  SearchCasePaneController -up-|> Initializable
  SearchCasePaneController -up-|> Application
  SearchCasePaneController o-- DatabaseHandler : dbh
  ViewCaseController -up-|> Initializable
  ViewCaseController -up-|> Application
  ViewCaseController o-- DatabaseHandler : dbh


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
